crates/rolldown/tests/rolldown/errors/unresolved_import/basic/entry.js
import test from 'test.js'
